<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#EEEEEE"
    tools:context=".fragment.AboutAppFragment">


    <TextView
        android:id="@+id/txtAboutAppFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="18dp"
        android:layout_marginVertical="25dp"
        android:text="@string/about_app_title"
        android:textColor="#3F51B5"
        android:textDirection="rtl"
        android:textSize="36sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/about_description_1"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/about_description_2"
        android:textColor="#333333"
        android:textSize="18sp"
        android:textStyle="normal" />

</LinearLayout>
